[package]
name = "u5_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "i2c"
# path = "src/bin/i2c.rs"

[dependencies]
cortex-m = { version = "0.7.7" }
libm = "0.2.8"
numeric-sort = "0.1.4"
defmt = "0.3.6"
defmt-rtt = { version = "0.4.0" }
cortex-m-rt = { version = "0.7.3", default-features = false }

u5-lib = { git = "https://github.com/chen-gz/stm32u5lib.git", features = [
    "utils",
    "stm32u575zi","lse","defmt"
], branch = "dev", default-features = false }



[dependencies.embassy-executor]
features = [ "arch-cortex-m", "executor-thread"]
version = "0.9.1"
[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "32cff65"

# [dependencies.stm32-metapac]
# #path = "../stm32-data/build/stm32-metapac"
# git = "https://gitea.ggeta.com/guangzong/stm32-data-generated"
# features = ["rt"]
# rev = "a3820c27dc"

# disable all optimizations
[profile.dev]
opt-level = 1
debug = true

[features]
stm32u575zi = ["u5-lib/stm32u575zi"]
stm32u5a5zj = ["u5-lib/stm32u5a5zj"]
stm32u575ci = ["u5-lib/stm32u575ci"]
# default = ["stm32u5a5zj"]
default = ["stm32u575zi"]